result/valid/t4.dtd.err
./test/valid/t4.dtd:1: error: xmlParseStartTag: invalid element name
<!ENTITY % percent "&#x25;">
^
./test/valid/t4.dtd:1: error: Extra content at the end of the document
<!ENTITY % percent "&#x25;">
^
